# book-management-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 4503707050fb_add_users_and_refresh_tokens.py  89661f32a2e0_initial_schema_authors_and_books.py
app/: main.py
app/api/: books.py
app/api/v1/: auth.py  books.py  health.py
app/core/: config.py  dependencies.py  enums.py  errors.py  file_parsers.py  logging.py  middleware.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  author.py  book.py  refresh_token.py  user.py
app/repositories/: author.py  book.py  book_repository.py  refresh_token.py  user.py
app/schemas/: auth.py  author.py  book.py
app/services/: auth.py  book.py  book_service.py
db/: base.py
docs/decisions/: 001-orm-vs-raw-sql.md  002-async-database-driver.md  003-sqlalchemy-session-per-request.md  004-uuid-vs-serial-pk.md  005-normalized-authors-table.md  006-refresh-token-rotation.md  007-genre-as-varchar-not-enum.md  008-author-identity-by-name.md  009-validation-layer-placement.md  010-concurrent-author-creation.md  011-integration-tests-real-postgres.md  012-bulk-import-strategy.md  013-export-selectinload.md  014-unified-error-format.md  015-structured-logging.md  016-auth-on-reads.md
tests/: conftest.py  factories.py  test_author_repo.py  test_book_api.py  test_book_schemas.py
