[project]
name = "book-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]
