[project]
name = "book-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.29",
    "bcrypt==4.0.1",
    "fastapi>=0.115",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]
